[package]
name = "topodump"
version = "1.0.1"
authors = ["Connor Worley <connorbworley@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
image = "0.23.14"
gdal = { git = "https://github.com/georust/gdal", rev = "c62a30607637bf428dd2c9a54c6f288d1e3cb0d6" }
